seaqt/QtWebKit/gen_qwebsecurityorigin.h

class QUrl;
class QWebDatabase;
class QWebSecurityOrigin;
typedef struct QUrl QUrl;
typedef struct QWebDatabase QWebDatabase;
typedef struct QWebSecurityOrigin QWebSecurityOrigin;
QWebSecurityOrigin* QWebSecurityOrigin_new(QUrl* url);
QWebSecurityOrigin* QWebSecurityOrigin_new2(QWebSecurityOrigin* other);
struct seaqt_array /* of QWebSecurityOrigin* */  QWebSecurityOrigin_allOrigins();
void QWebSecurityOrigin_addLocalScheme(struct seaqt_string scheme);
void QWebSecurityOrigin_removeLocalScheme(struct seaqt_string scheme);
struct seaqt_array /* of struct seaqt_string */  QWebSecurityOrigin_localSchemes();
void QWebSecurityOrigin_addAccessWhitelistEntry(QWebSecurityOrigin* self, struct seaqt_string scheme, struct seaqt_string host, int subdomainSetting);
void QWebSecurityOrigin_removeAccessWhitelistEntry(QWebSecurityOrigin* self, struct seaqt_string scheme, struct seaqt_string host, int subdomainSetting);
struct seaqt_string QWebSecurityOrigin_scheme(const QWebSecurityOrigin* self);
struct seaqt_string QWebSecurityOrigin_host(const QWebSecurityOrigin* self);
int QWebSecurityOrigin_port(const QWebSecurityOrigin* self);
long long QWebSecurityOrigin_databaseUsage(const QWebSecurityOrigin* self);
long long QWebSecurityOrigin_databaseQuota(const QWebSecurityOrigin* self);
void QWebSecurityOrigin_setDatabaseQuota(QWebSecurityOrigin* self, long long quota);
void QWebSecurityOrigin_setApplicationCacheQuota(QWebSecurityOrigin* self, long long quota);
struct seaqt_array /* of QWebDatabase* */  QWebSecurityOrigin_databases(const QWebSecurityOrigin* self);
void QWebSecurityOrigin_operatorAssign(QWebSecurityOrigin* self, QWebSecurityOrigin* other);
void QWebSecurityOrigin_delete(QWebSecurityOrigin* self);